[package]
name = "holdem"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.8", features=["derive"]}
context = "3.0.0"
iced = { version = "0.10.0", features = ["svg", "system"] }
iced_winit = { version = "0.10.0", features = ["sysinfo", "system"] }
rand = "0.8.5"

[profile.release]
debug = true
